<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <Button
        android:id="@+id/enterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@android:color/transparent"
        android:text="@string/submit"
        android:textAlignment="center"
        android:textColor="@drawable/button_text_color"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputAutoComplete" />

    <AutoCompleteTextView
        android:id="@+id/inputAutoComplete"
        style="@style/DropDownItemStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:completionThreshold="1"
        android:divider="@null"
        android:hint="@string/ssh_server_address5"
        android:inputType="text"
        android:minWidth="150sp"
        android:minHeight="50dp"
        android:popupBackground="#0FFF"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#757575"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/savePasswordCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="125dp"
        android:buttonTint="#757575"
        android:text="@string/save_npassword3"
        android:textColor="#FFFFFF"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/inputAutoComplete"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:background="@android:color/transparent"
        android:progressTint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50sp"
        android:autoLink="all"
        android:clickable="true"
        android:text="@string/https_beeralator_com"
        android:textColor="#757575"
        android:textColorLink="#757575"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
